--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,107 @@
+html,
 body {
-    background: #101b22;
-    color: #ddd7d8;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-align: center;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+body {
+    background: #D3D2CD;
+    color: #2B3038;
+    font-family:"Lato", sans-serif,  Geneva, Verdana, sans-serif;
+    font-size: 22px;
+    line-height: 1.75em;
 }
 
 a {
     color: #ed688b;
     font-size: inherit;
 }
+
+
+
+
+.wrapper {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: repeat(2, 1fr);
+
+    grid-auto-rows: max-content;
+}
+.one {
+    grid-column: 1 / 4;
+    grid-row: 1;
+    height: auto;
+    
+}
+
+.two {
+    grid-column: 1 / 4;
+    grid-row: 2;
+    align-self: flex-end
+}
+
+address {
+    padding: 2em 3em 3em
+}
+
+
+header {
+    padding: 1em;
+    overflow: auto;
+    background: #333;
+    color: white;
+}
+
+address {
+    font-style: normal;
+    line-height: 1.75rem
+}
+
+.email {
+    display: inline-flex
+}
+
+.user,
+.at-symbol,
+.domain {}
+
+
+
+.lato-regular {
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .lato-bold {
+    font-family: "Lato", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .lato-black {
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+  
+  .lato-regular-italic {
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .lato-bold-italic {
+    font-family: "Lato", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+  }
+  
+  .lato-black-italic {
+    font-family: "Lato", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+  }
+  
