--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
     background: #D3D2CD;
     color: #2B3038;
     font-family:"Lato", sans-serif,  Geneva, Verdana, sans-serif;
-    font-size: 22px;
+    font-size: 20px;
     line-height: 1.75em;
 }
 
@@ -17,8 +17,6 @@ a {
     color: #ed688b;
     font-size: inherit;
 }
-
-
 
 
 .wrapper {
@@ -43,7 +41,8 @@ a {
 }
 
 address {
-    padding: 2em 3em 3em
+    padding: 2rem 3rem 3rem;
+    font-size: 1.5em;
 }
 
 
@@ -59,16 +58,18 @@ address {
     line-height: 1.75rem
 }
 
-.email {
-    display: inline-flex
+
+
+/* Brand */
+.header {
+  background-color: #2B3038; padding: 2.5rem 3rem 3.25rem 3rem; text-align: left;
+}
+.brand {
+  display: inline; max-width: 400px; width: 100%;
 }
 
-.user,
-.at-symbol,
-.domain {}
 
-
-
+/* Fonts */
 .lato-regular {
     font-family: "Lato", sans-serif;
     font-weight: 400;
