--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,10 @@ body {
 }
 
 body {
-    background: #D3D2CD;
-    color: #2B3038;
+    color:#D3D2CD;
+    background-color:#2b3038;
     font-family:"Lato", sans-serif,  Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     line-height: 1.75em;
 }
 
